trying to fix word wrap issue

--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -43,7 +43,7 @@ h1, h2, h3 {
 
 pre {
 	word-wrap: break-word;
-	white-space: pre-line;
+	white-space: pre-wrap;
 	font-family: 'Source Sans Pro', sans-serif;
 	font-size: 16px;
 	background-color: transparent;
